--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Max Nachlinger"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "0.2", features = ["macros"] }
-sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "mssql" ] }
+tokio = { version = "0.2", features = ["full"] }
+sqlx = { git = "https://github.com/launchbadge/sqlx.git", default-features = false, features = [ "runtime-tokio", "macros", "mssql" ] }
