--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,12 @@ authors = ["Max Nachlinger"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "0.2", features = ["full"] }
+actix-web = "3"
+listenfd = "0.3.3"
+serde = "1.0.106"
+serde_json = "1.0.51"
+dotenv = "0.15.0"
+env_logger = "0.7.1"
+log = "0.4.8"
+anyhow = "1.0.28"
 sqlx = { git = "https://github.com/launchbadge/sqlx.git", default-features = false, features = [ "runtime-tokio", "macros", "mssql" ] }
